# sicp-logic-in-python

./: README.md  pyproject.toml
src/sicp_logic_in_python/: __init__.py  db.py  instantiate.py  query.py  rule.py  unification.py
tests/: test_query.py  test_readme_example.py  test_unification.py
