[project]
name = "sicp-logic-in-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "volesen", email = "vincolesen@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sicp_logic_in_python"]
